Opened 16 years ago

Closed 13 years ago

#4318 closed bug (fixed)

Resize to Fit cuts off a bit too much

Reported by: humdinger Owned by: axeld
Priority: normal Milestone: R1
Component: Applications/Tracker Version: R1/Development
Keywords: gci2011 Cc:
Blocked By: Blocking:
Platform: All

Description

This is hrev32626.

  • Open a Tracker window in List mode.
  • Adjust the attributes, so a right-aligned attribute like "Size" is the rightmost column.
  • Choose "Window|Resize to Fit (ALT+Y)" (or the "alternative size button of the window title tab)

-> The window is resized so that a few pixels from the Size column are cut off. Not exactly on the divider-line you see between attribute headings.
See attached shots. The cut-off.png shows how it's now, the better-resize2fit.png how I've manually resized to fit.

Attachments (2)

cut-off.png (13.1 KB ) - added by humdinger 16 years ago.
cut-off size column
better-resize2fit.png (13.1 KB ) - added by humdinger 16 years ago.
... and how it should be

Download all attachments as: .zip

Change History (6)

by humdinger, 16 years ago

Attachment: cut-off.png added

cut-off size column

by humdinger, 16 years ago

Attachment: better-resize2fit.png added

... and how it should be

comment:1 by diver, 15 years ago

Version: R1/pre-alpha1R1/Development

I agree, that looks better.

comment:2 by ctbeiser, 13 years ago

Still happens in hrev43524.

comment:3 by ctbeiser, 13 years ago

Keywords: gci2011 added

comment:4 by stpere, 13 years ago

Resolution: fixed
Status: newclosed

fixed in hrev44124, thanks!

Note: See TracTickets for help on using tickets.